# rules_distroless

./: .bazelignore  BUILD.bazel  MODULE.bazel
.github/workflows/: release.yml
apt/: BUILD.bazel  extensions.bzl
apt/private/: BUILD.bazel  apt_deb_repository.bzl  apt_dep_resolver.bzl  cc_deb_library.bzl  deb_export.bzl  deb_import.bzl  lockfile.bzl  pkgconfig.bzl  so_library.bzl  translate_dependency_set.bzl  util.bzl  version_constraint.bzl
apt/tests/: resolution_test.bzl  version_test.bzl
apt/tests/resolution/: BUILD.bazel
distroless/: BUILD.bazel  toolchains.bzl
distroless/private/: cacerts.bzl  java_keystore.bzl  os_release.bzl
e2e/smoke/: BUILD  MODULE.bazel
examples/: .bazelignore  MODULE.bazel  WORKSPACE
examples/cacerts/: BUILD.bazel
examples/cc_lib/: MODULE.bazel
examples/cc_lib/subfolder/: BUILD.bazel  test.c
examples/debian_snapshot/: BUILD.bazel
examples/flatten/: BUILD.bazel
examples/group/: BUILD.bazel
examples/home/: BUILD.bazel
examples/java_keystore/: BUILD.bazel
examples/locale/: BUILD.bazel
examples/os_release/: BUILD.bazel
examples/passwd/: BUILD.bazel
examples/statusd/: BUILD.bazel
examples/ubuntu_snapshot/: BUILD.bazel
