load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files([
    "extensions.bzl",
])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:dpkg_status",
        "//apt/private:dpkg_statusd",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:apt_deb_repository",
        "//apt/private:apt_dep_resolver",
        "//apt/private:deb_import",
        "//apt/private:lockfile",
        "//apt/private:translate_dependency_set",
        "//apt/private:util",
        "//apt/private:version_constraint",
    ],
)
