load("@bazel_lib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//distroless/private:cacerts",
        "//distroless/private:flatten",
        "//distroless/private:group",
        "//distroless/private:home",
        "//distroless/private:java_keystore",
        "//distroless/private:locale",
        "//distroless/private:os_release",
        "//distroless/private:passwd",
    ],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:repositories",
        "@rules_java//java:repositories",
        "@rules_java//java:rules_java_deps",
    ],
)
