load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "dpkg_statusd.sh",
    "dpkg_status.sh",
    "copy.sh.tmpl",
    "package.BUILD.tmpl",
])

bzl_library(
    name = "dpkg_status",
    srcs = ["dpkg_status.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "dpkg_statusd",
    srcs = ["dpkg_statusd.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":util"],
)

bzl_library(
    name = "apt_deb_repository",
    srcs = ["apt_deb_repository.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
        ":version_constraint",
    ],
)

bzl_library(
    name = "apt_dep_resolver",
    srcs = ["apt_dep_resolver.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":version",
        ":version_constraint",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@bazel_lib//lib:strings"],
)

bzl_library(
    name = "deb_import",
    srcs = ["deb_import.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":pkgconfig"],
)

bzl_library(
    name = "version_constraint",
    srcs = ["version_constraint.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":version"],
)

bzl_library(
    name = "translate_dependency_set",
    srcs = ["translate_dependency_set.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":lockfile",
        ":starlark_codegen_utils",
        ":util",
        "//apt:defs",
        "//distroless:defs",
    ],
)

bzl_library(
    name = "deb_export",
    srcs = ["deb_export.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:tar"],
)

bzl_library(
    name = "deb_translate_lock",
    srcs = ["deb_translate_lock.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":lockfile",
        ":starlark_codegen_utils",
        ":util",
    ],
)

bzl_library(
    name = "so_library",
    srcs = ["so_library.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@rules_cc//cc:find_cc_toolchain_bzl"],
)

bzl_library(
    name = "cc_deb_library",
    srcs = ["cc_deb_library.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "deb_postfix",
    srcs = ["deb_postfix.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "pkgconfig",
    srcs = ["pkgconfig.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "starlark_codegen_utils",
    srcs = ["starlark_codegen_utils.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apt:__subpackages__"],
)
