load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_distroless//distroless:defs.bzl", "flatten", "home", "passwd")
load("@rules_distroless//distroless/tests:asserts.bzl", "assert_tar_listing", "assert_tar_mtree")

passwd(
    name = "passwd",
    entries = [
        {
            "gecos": ["root"],
            "gid": 0,
            "home": "root",
            "shell": "usr/bin/bash",
            "uid": 0,
            "username": "root",
        },
    ],
)

home(
    name = "home",
    dirs = [
        {
            "home": "root",
            "uid": 0,
            "gid": 0,
        },
        {
            "home": "home/nonroot",
            "uid": 666,
            "gid": 666,
        },
    ],
)

tar(
    name = "source",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

flatten(
    name = "flatten",
    tars = [
        ":passwd",
        ":home",
        ":source",
    ],
)

assert_tar_mtree(
    name = "test_flatten",
    actual = "flatten",
    expected = """\
#mtree
./etc time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/passwd time=0.0 mode=644 gid=0 uid=0 type=file size=34
./flatten time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir/changelog time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./flatten/dir/sub time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir/sub/content.txt time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./home/nonroot time=0.0 mode=700 gid=666 uid=666 type=dir
./root time=0.0 mode=700 gid=0 uid=0 type=dir
""",
)

# Flatten with deduplication
tar(
    name = "source1",
    srcs = glob(["dir/*"]),
    compress = "xz",
)

tar(
    name = "source2",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

tar(
    name = "source3",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

flatten(
    name = "flatten_dedup",
    deduplicate = True,
    tars = [
        ":source2",
        ":source1",
        ":source3",
    ],
)

assert_tar_mtree(
    name = "test_flatten_dedup_mtree",
    actual = "flatten_dedup",
    expected = """\
#mtree
./flatten time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir/changelog time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./flatten/dir/sub time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./flatten/dir/sub/content.txt time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
""",
)

assert_tar_listing(
    name = "test_flatten_dedup_listing",
    actual = "flatten_dedup",
    expected = """\
flatten/
flatten/dir/
flatten/dir/changelog
flatten/dir/sub/
flatten/dir/sub/content.txt
""",
)
