# Ubuntu Noble example is temporarily disabled.
#
# The snapshot URLs at https://snapshot.ubuntu.com/ubuntu/20240301T030400Z
# are returning 404 errors. This example will need to be updated with
# working snapshot URLs when available.
#
# See MODULE.bazel for the commented out apt.sources_list and apt.install
# configuration that was used.
