load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test",
    srcs = ["test.c"],
    copts = ["-Wno-int-conversion"],
    deps = [
        "@bookworm//libnl-3-dev:libnl-3",
        "@bookworm//libnl-nf-3-dev:libnl-nf-3",
        "@bookworm//libnl-genl-3-dev:libnl-genl-3",
        # "@bookworm//nlohmann-json3-dev:nlohmann-json3"
    ],
)
